Class 1, completed programming assignment with discussion from class.

--- a/class_assignments/class_1_python_and_pytorch.ipynb
+++ b/class_assignments/class_1_python_and_pytorch.ipynb
@@ -97,11 +97,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "BHqi_DZEk01y"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/webster/.virtualenvs/torch_310/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "# import pytorch library\n",
         "import torch"
@@ -334,15 +343,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "kEiaQ80RE8Na"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[0.4622, 0.4253, 0.4369, 0.5235, 0.5317, 0.2228, 0.5020, 0.2503],\n",
+              "        [0.3992, 0.3673, 0.3773, 0.4521, 0.4592, 0.1924, 0.4335, 0.2162],\n",
+              "        [0.0660, 0.0607, 0.0623, 0.0747, 0.0759, 0.0318, 0.0716, 0.0357],\n",
+              "        [0.0823, 0.0757, 0.0777, 0.0932, 0.0946, 0.0396, 0.0893, 0.0445],\n",
+              "        [0.3878, 0.3569, 0.3666, 0.4393, 0.4462, 0.1869, 0.4212, 0.2100],\n",
+              "        [0.5850, 0.5383, 0.5529, 0.6625, 0.6730, 0.2819, 0.6353, 0.3168],\n",
+              "        [0.5508, 0.5068, 0.5206, 0.6238, 0.6337, 0.2655, 0.5982, 0.2983],\n",
+              "        [0.0691, 0.0636, 0.0653, 0.0783, 0.0795, 0.0333, 0.0751, 0.0374]])"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# create a vector v and a vector u, print shapes\n",
         "\n",
-        "# perform outer product on vector v and vector u\n"
+        "# perform outer product on vector v and vector u\n",
+        "v = torch.rand(8)\n",
+        "u = torch.rand(8)\n",
+        "torch.outer(u, v)"
       ]
     },
     {
@@ -367,11 +397,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "ykCw16L6Fze3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[[0.9871, 0.9204],\n",
+              "         [1.0615, 1.0675],\n",
+              "         [0.9607, 0.8765]],\n",
+              "\n",
+              "        [[0.6538, 0.4842],\n",
+              "         [0.9587, 1.2650],\n",
+              "         [0.7895, 1.0669]]])"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# create a matrix A and a matrix B, print shapes\n",
         "\n",
@@ -379,7 +426,11 @@
         "# (8, 3, 3) and (8, 3, 2) -> ???\n",
         "# first dimension must match between A and B\n",
         "# last dimension of A must match second dimension of B\n",
-        "\n"
+        "\n",
+        "A = torch.rand(2, 3, 3)\n",
+        "B = torch.rand(2, 3, 2)\n",
+        "\n",
+        "torch.bmm(A, B)"
       ]
     }
   ],
@@ -390,11 +441,26 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "torch_310",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.6"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "c9da3d56ffdc97607f191e5b9c6431043c903c2295bd799ca4e7536541698e73"
+      }
     }
   },
   "nbformat": 4,
