Fixed a problem passing optimizer to test function when not needed.

--- a/completed_class_assignments/class_3_multi_layer_perceptron_completed.ipynb
+++ b/completed_class_assignments/class_3_multi_layer_perceptron_completed.ipynb
@@ -389,7 +389,7 @@
         "test_accuracies = []\n",
         "for epoch in range(num_epochs):\n",
         "  train_loss, train_accuracy = train(model, optimizer, train_dataloader)\n",
-        "  test_loss, test_accuracy = test(model, optimizer, test_dataloader)\n",
+        "  test_loss, test_accuracy = test(model, test_dataloader)\n",
         "\n",
         "  print(f'Train loss: {train_loss.item():.2f}, Train Accuracy: {train_accuracy.item():.2f}, Test loss: {test_loss.item():.2f}, Test Accuracy: {test_accuracy.item():.2f}')\n",
         "\n",
